Kubernates/k8s/upgloadme-deployment.yaml
#following file shows deployment of simple node app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upg-loadme
  namespace: demo
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      containers:
      - name: upg-loadme
        image: 337384287907.dkr.ecr.us-east-1.amazonaws.com/capstone_upg:latest
        # limiting cpu & mem usage of a pod
        resources:
          requests:
            cpu: 800m
            memory: 400Mi
          limits:
            cpu: 1000m
            memory: 400Mi
        imagePullPolicy: Always
      # add tolerations to restrict running on selected nodes
      tolerations:
      - key: "upgkey"
        operator: Equal
        value: "true"
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst

---
apiVersion: v1
kind: Service
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: NodePort
  ports:
    - name: app-port
      protocol: TCP
      port: 80
      targetPort: 8081
